@@ -36,6 +36,7 @@ Release 0.5
 * clustering:smart_search and merging:correct_lag are now True by default
 * fix a minor bug in the smart search, biasing the estimation of densities
 * fix a bug with the masks and the smart-search: improving results
+* addition of an overwrite parameter. Note that any t_start/t_stop infos are lost
 * if using streams, or internal t_start, output times are on the same time axis than the datafile
 
 
